Changed styling and other components. Modified redraft rank calc

--- a/LeagueDashboardUI/src/App.css
+++ b/LeagueDashboardUI/src/App.css
@@ -1,41 +1,9 @@
 .App {
   text-align: center;
+  background: black;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .field {
   display: flex;
@@ -48,6 +16,7 @@
 
 .mainContent {
   padding: 50px;
+  padding-top: 10px;
 }
 
 .userForm {
@@ -58,4 +27,10 @@
 .userNameField {
   display: flex;
   justify-content: center;
+}
+
+a:-webkit-any-link {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
 }
