--- a/LeagueDashboardUI/src/index.css
+++ b/LeagueDashboardUI/src/index.css
@@ -1,3 +1,11 @@
+
+/* Set the dark mode variables... */
+[data-theme="dark"] {
+  --background: black;
+  --title-text: white;
+  --desc-text: grey;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +13,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: black;
 }
 
 code {
