--- a/LeagueDashboardUI/src/App.css
+++ b/LeagueDashboardUI/src/App.css
@@ -4,6 +4,9 @@
   height: 100vh;
 }
 
+.mainContent {
+  background: black;
+}
 
 .field {
   display: flex;
@@ -33,4 +36,8 @@ a:-webkit-any-link {
   text-decoration: none;
   color: white;
   cursor: pointer;
+}
+
+.cardContainer {
+  align-items: stretch;
 }
