--- a/LeagueDashboardUI/src/App.css
+++ b/LeagueDashboardUI/src/App.css
@@ -45,3 +45,36 @@ a:-webkit-any-link {
 .canvas-container {
   height: 60vh;
 }
+
+.page-item .page-link {
+  background: grey;
+}
+
+.player-table {
+
+  position: relative;
+}
+
+.table {
+
+  text-align: left;
+
+}
+
+.overlay {
+  position: absolute;
+
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  background-color: rgba(241, 241, 241, 0.1); 
+}
+
+.spinner {
+  position: absolute;
+  color: white;
+  top: 50%;
+  left: 50%;
+}
